--- a/MediaBrowser.Server.Implementations/MediaBrowser.Server.Implementations.csproj
+++ b/MediaBrowser.Server.Implementations/MediaBrowser.Server.Implementations.csproj
@@ -370,76 +370,9 @@
     <EmbeddedResource Include="Localization\Ratings\ru.txt" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Localization\JavaScript\javascript.json" />
-    <EmbeddedResource Include="Localization\Server\server.json" />
-    <EmbeddedResource Include="Localization\Server\de.json" />
-    <EmbeddedResource Include="Localization\Server\ru.json" />
-    <EmbeddedResource Include="Localization\JavaScript\de.json" />
-    <EmbeddedResource Include="Localization\JavaScript\fr.json" />
-    <EmbeddedResource Include="Localization\JavaScript\nl.json" />
-    <EmbeddedResource Include="Localization\JavaScript\ru.json" />
-    <EmbeddedResource Include="Localization\Server\fr.json" />
-    <EmbeddedResource Include="Localization\Server\nl.json" />
-    <EmbeddedResource Include="Localization\JavaScript\es.json" />
-    <EmbeddedResource Include="Localization\Server\es.json" />
-    <EmbeddedResource Include="Localization\JavaScript\it.json" />
-    <EmbeddedResource Include="Localization\Server\he.json" />
-    <EmbeddedResource Include="Localization\Server\it.json" />
-    <EmbeddedResource Include="Localization\JavaScript\ar.json" />
-    <EmbeddedResource Include="Localization\JavaScript\he.json" />
-    <EmbeddedResource Include="Localization\JavaScript\nb.json" />
-    <EmbeddedResource Include="Localization\Server\ar.json" />
-    <EmbeddedResource Include="Localization\Server\el.json" />
-    <EmbeddedResource Include="Localization\Server\nb.json" />
-    <EmbeddedResource Include="Localization\JavaScript\el.json" />
-    <EmbeddedResource Include="Localization\JavaScript\sv.json" />
-    <EmbeddedResource Include="Localization\Server\sv.json" />
-    <EmbeddedResource Include="Localization\JavaScript\cs.json" />
-    <EmbeddedResource Include="Localization\Server\cs.json" />
-    <EmbeddedResource Include="Localization\JavaScript\ca.json" />
-    <EmbeddedResource Include="Localization\JavaScript\ms.json" />
-    <EmbeddedResource Include="Localization\Server\ca.json" />
-    <EmbeddedResource Include="Localization\Server\ms.json" />
-    <EmbeddedResource Include="Localization\JavaScript\kk.json" />
-    <EmbeddedResource Include="Localization\Server\kk.json" />
     <EmbeddedResource Include="Localization\countries.json" />
-    <EmbeddedResource Include="Localization\JavaScript\da.json" />
-    <EmbeddedResource Include="Localization\JavaScript\vi.json" />
-    <EmbeddedResource Include="Localization\Server\da.json" />
-    <EmbeddedResource Include="Localization\Server\vi.json" />
-    <EmbeddedResource Include="Localization\JavaScript\pl.json" />
-    <EmbeddedResource Include="Localization\Server\pl.json" />
-    <EmbeddedResource Include="Localization\Server\ko.json" />
-    <EmbeddedResource Include="Localization\JavaScript\tr.json" />
-    <EmbeddedResource Include="Localization\Server\tr.json" />
-    <EmbeddedResource Include="Localization\JavaScript\hr.json" />
-    <EmbeddedResource Include="Localization\Server\hr.json" />
-    <EmbeddedResource Include="Localization\JavaScript\fi.json" />
-    <EmbeddedResource Include="Localization\Server\fi.json" />
     <None Include="app.config" />
-    <EmbeddedResource Include="Localization\JavaScript\uk.json" />
-    <EmbeddedResource Include="Localization\Server\uk.json" />
-    <EmbeddedResource Include="Localization\JavaScript\hu.json" />
-    <EmbeddedResource Include="Localization\JavaScript\be-BY.json" />
-    <EmbeddedResource Include="Localization\JavaScript\bg-BG.json" />
-    <EmbeddedResource Include="Localization\JavaScript\en-GB.json" />
-    <EmbeddedResource Include="Localization\JavaScript\en-US.json" />
-    <EmbeddedResource Include="Localization\JavaScript\es-MX.json" />
-    <EmbeddedResource Include="Localization\JavaScript\es-VE.json" />
-    <EmbeddedResource Include="Localization\JavaScript\pt-BR.json" />
-    <EmbeddedResource Include="Localization\JavaScript\pt-PT.json" />
-    <EmbeddedResource Include="Localization\JavaScript\sl-SI.json" />
-    <EmbeddedResource Include="Localization\JavaScript\zh-CN.json" />
-    <EmbeddedResource Include="Localization\JavaScript\zh-TW.json" />
-    <EmbeddedResource Include="Localization\Server\bg-BG.json" />
-    <EmbeddedResource Include="Localization\Server\en-GB.json" />
-    <EmbeddedResource Include="Localization\Server\en-US.json" />
-    <EmbeddedResource Include="Localization\Server\es-MX.json" />
-    <EmbeddedResource Include="Localization\Server\pt-BR.json" />
-    <EmbeddedResource Include="Localization\Server\pt-PT.json" />
-    <EmbeddedResource Include="Localization\Server\sl-SI.json" />
-    <EmbeddedResource Include="Localization\Server\zh-CN.json" />
-    <EmbeddedResource Include="Localization\Server\zh-TW.json" />
+    <EmbeddedResource Include="Localization\Core\core.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
